Fix DockerManager: use container id instead of container name